[gd_scene load_steps=5 format=3 uid="uid://bhf8xbo0h5k3"]

[ext_resource type="Script" path="res://Scenes/Towers/basic_bubble_tower.gd" id="1_pcvh0"]
[ext_resource type="Texture2D" uid="uid://cqr061wxs1tcd" path="res://Assets/base_fish_attacking.png" id="2_ebkgj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cunc7"]
radius = 17.0
height = 68.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7oxiw"]
radius = 297.007

[node name="BasicBubbleTower" type="StaticBody2D"]
script = ExtResource("1_pcvh0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cunc7")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(-30, 0)

[node name="BasicBubbleSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ebkgj")

[node name="Tower" type="Area2D" parent="."]
position = Vector2(21, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
position = Vector2(-21, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_7oxiw")

[node name="BulletContainer" type="Node" parent="."]

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
